--- a/multi-llm/docker-compose.working-fast.yml
+++ b/multi-llm/docker-compose.working-fast.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 
 services:
-  # APENAS OS MODELOS QUE FUNCIONAM
+  # ===== MESMA CONFIGURAÇÃO QUE FUNCIONAVA + PEQUENOS AJUSTES =====
+  
+  # Llama 8B - Funcionava + pequeno ajuste
   llama-8b-balanced:
     build:
       context: .
@@ -13,13 +15,14 @@ services:
       - MODEL_NAME=Llama 3.1 8B Balanced
       - MODEL_PATH=/app/models/llama/llama-3.1-8b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=general,complex-tasks
+      - GPU_LAYERS=32          # ERA 30, agora 32 (pequeno ajuste)
+      - CONTEXT_SIZE=3072      # ERA 4096, agora 3072 (25% mais rápido)
+      - MODEL_SPECIALTIES=general,complex-tasks,multilingual
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
       - ./models:/app/models:ro
+      - ./config:/app/config:ro
     deploy:
       resources:
         reservations:
@@ -29,7 +32,13 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
+  # CodeLlama - Funcionava + pequeno ajuste
   codellama-7b:
     build:
       context: .
@@ -41,13 +50,14 @@ services:
       - MODEL_NAME=CodeLlama 7B Specialist
       - MODEL_PATH=/app/models/llama/codellama-7b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=code,programming
+      - GPU_LAYERS=32          # ERA 30, agora 32
+      - CONTEXT_SIZE=3072      # ERA 4096, agora 3072  
+      - MODEL_SPECIALTIES=code,programming,debugging,development
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
       - ./models:/app/models:ro
+      - ./config:/app/config:ro
     deploy:
       resources:
         reservations:
@@ -57,7 +67,13 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
+  # Mistral - Funcionava + pequeno ajuste
   mistral-7b-code:
     build:
       context: .
@@ -69,13 +85,14 @@ services:
       - MODEL_NAME=Mistral 7B Code
       - MODEL_PATH=/app/models/mistral/mistral-7b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=8192
-      - MODEL_SPECIALTIES=code,technical
+      - GPU_LAYERS=32          # ERA 30, agora 32
+      - CONTEXT_SIZE=6144      # ERA 8192, agora 6144 (25% mais rápido)
+      - MODEL_SPECIALTIES=code,programming,technical
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
       - ./models:/app/models:ro
+      - ./config:/app/config:ro
     deploy:
       resources:
         reservations:
@@ -85,7 +102,13 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
+  # Solar - Funcionava + pequeno ajuste
   solar-10b-premium:
     build:
       context: .
@@ -97,13 +120,14 @@ services:
       - MODEL_NAME=Solar 10.7B Premium
       - MODEL_PATH=/app/models/solar/solar-10.7b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=35
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=complex-reasoning
+      - GPU_LAYERS=32          # ERA 30, agora 32
+      - CONTEXT_SIZE=3072      # ERA 4096, agora 3072
+      - MODEL_SPECIALTIES=complex-reasoning,high-quality,detailed-analysis
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
       - ./models:/app/models:ro
+      - ./config:/app/config:ro
     deploy:
       resources:
         reservations:
@@ -113,8 +137,13 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # GATEWAY FUNCIONAL
+  # ===== GATEWAY QUE FUNCIONAVA =====
   smart-gateway-v2:
     build:
       context: ./gateway-v2
@@ -125,7 +154,7 @@ services:
     ports:
       - "8200:8200"
     environment:
-      - GATEWAY_VERSION=2.1
+      - GATEWAY_VERSION=2.1-working-fast
       - LOG_LEVEL=INFO
     networks:
       - llm-network
@@ -134,8 +163,13 @@ services:
       - codellama-7b
       - mistral-7b-code
       - solar-10b-premium
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8200/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # MONITORING
+  # ===== MONITORING =====
   monitoring:
     image: nginx:alpine
     container_name: llm-monitoring
