--- a/multi-llm/docker-compose.balanced.yml
+++ b/multi-llm/docker-compose.balanced.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 
 services:
-  # APENAS OS MODELOS QUE FUNCIONAM
+  # ===== MODELOS BALANCEADOS (FUNCIONAIS + RÁPIDOS) =====
+  
+  # Llama 8B - Configuração Balanceada
   llama-8b-balanced:
     build:
       context: .
@@ -13,9 +15,9 @@ services:
       - MODEL_NAME=Llama 3.1 8B Balanced
       - MODEL_PATH=/app/models/llama/llama-3.1-8b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=general,complex-tasks
+      - GPU_LAYERS=35          # SEGURO para RTX 3060
+      - CONTEXT_SIZE=2048      # BALANCEADO
+      - MODEL_SPECIALTIES=general,balanced
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
@@ -29,21 +31,27 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  codellama-7b:
+  # CodeLlama - Configuração Balanceada
+  codellama-7b-balanced:
     build:
       context: .
       dockerfile: containers/Dockerfile.llm-base
     image: llm-multi-base:latest
-    container_name: codellama-7b
+    container_name: codellama-7b-balanced
     restart: unless-stopped
     environment:
-      - MODEL_NAME=CodeLlama 7B Specialist
+      - MODEL_NAME=CodeLlama 7B Balanced
       - MODEL_PATH=/app/models/llama/codellama-7b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=code,programming
+      - GPU_LAYERS=35          # SEGURO
+      - CONTEXT_SIZE=2048      # BALANCEADO
+      - MODEL_SPECIALTIES=code,balanced
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
@@ -57,49 +65,27 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  mistral-7b-code:
+  # Solar - Configuração Conservadora (modelo maior)
+  solar-10b-balanced:
     build:
       context: .
       dockerfile: containers/Dockerfile.llm-base
     image: llm-multi-base:latest
-    container_name: mistral-7b-code
+    container_name: solar-10b-balanced
     restart: unless-stopped
     environment:
-      - MODEL_NAME=Mistral 7B Code
-      - MODEL_PATH=/app/models/mistral/mistral-7b-instruct-q4_k_m.gguf
-      - SERVER_PORT=8000
-      - GPU_LAYERS=30
-      - CONTEXT_SIZE=8192
-      - MODEL_SPECIALTIES=code,technical
-      - NVIDIA_VISIBLE_DEVICES=0
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
-    volumes:
-      - ./models:/app/models:ro
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
-    networks:
-      - llm-network
-
-  solar-10b-premium:
-    build:
-      context: .
-      dockerfile: containers/Dockerfile.llm-base
-    image: llm-multi-base:latest
-    container_name: solar-10b-premium
-    restart: unless-stopped
-    environment:
-      - MODEL_NAME=Solar 10.7B Premium
+      - MODEL_NAME=Solar 10.7B Balanced
       - MODEL_PATH=/app/models/solar/solar-10.7b-instruct-q4_k_m.gguf
       - SERVER_PORT=8000
-      - GPU_LAYERS=35
-      - CONTEXT_SIZE=4096
-      - MODEL_SPECIALTIES=complex-reasoning
+      - GPU_LAYERS=30          # CONSERVADOR para modelo maior
+      - CONTEXT_SIZE=2048      # BALANCEADO
+      - MODEL_SPECIALTIES=premium,balanced
       - NVIDIA_VISIBLE_DEVICES=0
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
@@ -113,29 +99,38 @@ services:
               capabilities: [gpu]
     networks:
       - llm-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # GATEWAY FUNCIONAL
-  smart-gateway-v2:
+  # ===== GATEWAY BALANCEADO =====
+  balanced-gateway:
     build:
       context: ./gateway-v2
       dockerfile: Dockerfile
     image: llm-smart-gateway-v2:latest
-    container_name: smart-gateway-v2
+    container_name: balanced-gateway
     restart: unless-stopped
     ports:
       - "8200:8200"
     environment:
-      - GATEWAY_VERSION=2.1
+      - GATEWAY_VERSION=2.5-balanced
       - LOG_LEVEL=INFO
     networks:
       - llm-network
     depends_on:
       - llama-8b-balanced
-      - codellama-7b
-      - mistral-7b-code
-      - solar-10b-premium
+      - codellama-7b-balanced  
+      - solar-10b-balanced
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8200/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # MONITORING
+  # ===== MONITORING =====
   monitoring:
     image: nginx:alpine
     container_name: llm-monitoring
