--- a/multi-llm/containers/Dockerfile.llm-cuda-working
+++ b/multi-llm/containers/Dockerfile.llm-cuda-working
@@ -1,41 +1,41 @@
-FROM nvidia/cuda:12.8.0-devel-ubuntu22.04
+ FROM nvidia/cuda:12.8.0-devel-ubuntu22.04
+ ENV DEBIAN_FRONTEND=noninteractive
+ ENV LLAMA_CUDA=1
+ ENV LLAMA_CUBLAS=1
+ ENV CMAKE_CUDA_ARCHITECTURES=75;86
 
-ENV DEBIAN_FRONTEND=noninteractive
-ENV LLAMA_CUDA=1
-ENV LLAMA_CUBLAS=1
-ENV CMAKE_CUDA_ARCHITECTURES=75;86
+ # Usar retry para problemas de rede
+ RUN echo 'Acquire::Retries "3";' > /etc/apt/apt.conf.d/80-retries && \
+     apt-get clean && \
+     rm -rf /var/lib/apt/lists/* && \
+     apt-get update --fix-missing && \
+     apt-get install -y --no-install-recommends \
+       python3 python3-pip python3-dev \
+       build-essential cmake ninja-build pkg-config \
+       git curl wget \
+     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Usar retry para problemas de rede
-RUN echo 'Acquire::Retries "3";' > /etc/apt/apt.conf.d/80-retries && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    apt-get update --fix-missing && \
-    apt-get install -y --no-install-recommends \
-    python3 python3-pip python3-dev \
-    build-essential cmake ninja-build pkg-config \
-    git curl wget \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
++ # Garantir que o linker ache libcuda.so.1
++ RUN ln -sf /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so.1 && ldconfig
 
-RUN python3 -m pip install --upgrade pip
+ RUN python3 -m pip install --upgrade pip
 
-# Dependências Python
-RUN pip3 install --no-cache-dir \
-    fastapi==0.104.1 \
-    uvicorn==0.23.2 \
-    pydantic==2.4.2 \
-    httpx==0.25.1 \
-    numpy==1.24.3 \
-    psutil
+ # Dependências Python
+ RUN pip3 install --no-cache-dir \
+     fastapi==0.104.1 \
+     uvicorn==0.23.2 \
+     pydantic==2.4.2 \
+     httpx==0.25.1 \
+     numpy==1.24.3 \
+     psutil
 
-# IMPORTANTE: Forçar recompilação com CUDA
-RUN CMAKE_ARGS="-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=75;86" \
-    FORCE_CMAKE=1 \
-    pip3 install llama-cpp-python==0.2.90 --no-cache-dir --force-reinstall --no-binary llama-cpp-python --verbose
+ # IMPORTANTE: Forçar recompilação com CUDA
+ RUN CMAKE_ARGS="-DGGML_CUDA=on -DCMAKE_CUDA_ARCHITECTURES=75;86" \
+     FORCE_CMAKE=1 \
+     pip3 install llama-cpp-python==0.2.90 --no-cache-dir --force-reinstall --no-binary llama-cpp-python --verbose
 
-WORKDIR /app
-COPY containers/llm_server.py /app/
-COPY containers/entrypoint.sh /app/
-RUN chmod +x /app/entrypoint.sh
+ WORKDIR /app
+ COPY containers/llm_server.py /app/
+ COPY containers/entrypoint.sh /app/
+ RUN chmod +x /app/entrypoint.sh
 
-EXPOSE 8000
-ENTRYPOINT ["/app/entrypoint.sh"]
